Fixed invisible editor

--- a/less/template-icon-2-lines.less
+++ b/less/template-icon-2-lines.less
@@ -3,7 +3,7 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
-  align-items: center;
+  align-items: stretch;
   padding: 1px;
   font-size: 14px;
   line-height: 15px;
